# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//version/process_version_rc_template.gni")

if (is_win) {
  process_version_rc_template("example_version") {
    sources = [
      "example.ver",
    ]
    output = "$target_gen_dir/example_version.rc"
  }
}

executable("Example") {
  sources = [
    "//cherry/bootstrap.cpp",
    "//cherry/bootstrap.h",
    "//cherry/callback.h",
    "//cherry/event_bus.cpp",
    "//cherry/event_bus.h",
    "//cherry/event_macro.h",
    "//cherry/task_runner.cpp",
    "//cherry/task_runner.h",
    "//cherry/time.h",
    "//cherry/waitable_event.cpp",
    "//cherry/waitable_event.h",
    "example.cpp",
  ]

  include_dirs = [
    "//",
    "//include",
  ]

  if (is_win) {
    deps = [":example_version"]
  }

}
